--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ body{
     color: blanchedalmond;
     animation: movimiento 10s infinite;
 }
+.navbar{
+    height: 5%;
+    padding: 0;
+    margin: 0;
+}
 .logo {
     height: 40px;
     margin-top: 20px;
@@ -18,6 +23,7 @@ body{
 .text-description{
     letter-spacing: 2px;
     font-family: sans-serif;
+    margin-top: 150px;
 }
 .titulo{
     font-family: 'Times New Roman', Times, serif;
